<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_cat1_name"
        android:inputType="textCapWords"
        android:key="ui_name_1"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_name1" />
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="ui_id_1"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_id_1" />
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="ui_key_1"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_key_1" /> />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_cat2_name"
        android:inputType="textCapWords"
        android:key="ui_name_2"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_name2" />
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="ui_id_2"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_id_2" /> />
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="ui_key_2"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_key_2" />
</PreferenceScreen>
